修改html文件，修复bug

--- a/awesome-python3-webapp/www/templates/__base__.html
+++ b/awesome-python3-webapp/www/templates/__base__.html
@@ -42,6 +42,15 @@
 		</div>
 	</nav>
 
+    <div class="uk-container uk-container-center">
+        <div class="uk-grid">
+            <!-- content -->
+            {% block content %}
+            {% endblock %}
+            <!-- // content -->
+        </div>
+    </div>
+
 	<div class="uk-margin-large-top" style="backgroud-color:#eee; border-top:1px solid #ccc;">
 		<div class="uk-container uk-container-center uk-text-center">
 			<div class="uk-panel uk-margin-top uk-margin-bottom">
